# snn-encoder-test

./: .env.example  .gitignore  Explore.ipynb  LICENSE  README.md  classifier_tuning.db  encoder-test.ipynb  main.py  model_inference_test.ipynb  model_testing_1.ipynb  model_testing_2.ipynb  model_testing_3.ipynb  model_tuning_1.ipynb  preprocess.ipynb  pyproject.toml  requirement.txt  visualizer.ipynb
dataset/: __init__.py  lightning.py  seizure.py
eeg_snn_encoder/: __init__.py  callback.py  config.py  dataset.py  features.py  metrics.py  parser.py  plots.py  preprocess.py  tuning.py
encoder/: __init__.py  base.py  deconv.py  global_refer.py  latency.py  rate.py  temporal.py
model/: __init__.py  classifier.py  lightning.py
notebooks/: 0-encoder-test.ipynb  0-merge.ipynb  0-preprocess-stft.ipynb  0-sampling-dataset.ipynb  3-encoder-tuning-All.ipynb  3-final-model.ipynb  3-model-tuning-All-model-only.ipynb  3-model-tuning-All.ipynb  3-model-tuning-BE.ipynb  3-model-tuning-BSA.ipynb  3-model-tuning-Dummy.ipynb  3-model-tuning-PE.ipynb  3-model-tuning-Poisson.ipynb  3-model-tuning-SF.ipynb  3-model-tuning-TBR.ipynb  4-final-model.ipynb  4-model-fine-tuning-All.ipynb  4-model-fine-tuning-BE.ipynb  4-model-fine-tuning-BSA.ipynb  4-model-fine-tuning-PE.ipynb  4-model-fine-tuning-Poisson.ipynb  4-model-fine-tuning-TBR.ipynb  4-model-param-test.ipynb  5-final-model-BE.ipynb  5-final-model-BSA.ipynb  5-final-model-PE.ipynb  5-final-model-TBR.ipynb  5-final-model.ipynb  5-model-cv-All-model-only.ipynb  5-model-cv-All-output.ipynb  5-model-cv-All.ipynb  6-encoder-visual.ipynb  6-poster-visual.ipynb  6-report-resource.ipynb  Genetic_testing.ipynb  Preprocess-stft.ipynb  encdoer-test-signal.ipynb  encoder-test.ipynb  encoder-tuning-BSA-Copy1.ipynb  encoder-tuning-BSA.ipynb  (+15 more)
reports/: be_model_param.json  be_model_params.json  be_model_params_fixed.json  be_model_params_new.json  be_model_params_using_bsa.json  be_model_results.csv  be_model_results_fixed.csv  be_model_results_new.csv  be_model_results_using_bsa.csv  bsa_model_param.json  bsa_model_params.json  bsa_model_params_fixed.json  bsa_model_params_new.json  bsa_model_results.csv  bsa_model_results_fixed.csv  bsa_model_results_new.csv  dummy_model_params.json  dummy_model_params_new.json  dummy_model_params_using_bsa.json  dummy_model_results.csv  dummy_model_results_fixed.csv  dummy_model_results_new.csv  dummy_model_results_using_bsa.csv  encoder_params.csv  encoder_results.csv  pe_1_model_params_using_bsa.json  pe_1_model_results_using_bsa.csv  pe_model_param.json  pe_model_params.json  pe_model_params_new.json  pe_model_params_using_bsa.json  pe_model_results.csv  pe_model_results_fixed.csv  pe_model_results_new.csv  pe_model_results_using_bsa.csv  poisson_1_model_params_using_bsa.json  poisson_1_model_results_using_bsa.csv  poisson_8_model_params_using_bsa.json  poisson_8_model_results_using_bsa.csv  poisson_model_params.json  (+26 more)
scripts/: cv-all.py  fine-tuning-all.py  tuning-all.py  tuning-model-only.py  (+1 more)
(+17 files in other folders)
